# rcli

./: Cargo.toml
src/: lib.rs  main.rs  opts.rs  process.rs
src/cli/: base64_opts.rs  csv_opts.rs  genpass_opts.rs  http_opts.rs  mod.rs  opts.rs  text_opts.rs
src/process/: base64.rs  common.rs  csv_convert.rs  gen_pass.rs  http_server.rs  mod.rs  text.rs
