[package]
name = "rcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["http2", "query", "tracing"] }
base64 = "0.22.1"
blake3 = "1.8.2"
clap = { version = "4.5.47", features = ["derive"] }
csv = "1.3.1"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
encoding_rs = "0.8.35"
rand = "0.9.2"
#rand_core = { version = "0.6.4", features = ["os_rng"] }
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0.144"
serde_yaml = "0.9.34"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "net", "fs", "macros"] }
toml = "0.9.5"
tower-http = { version = "0.6.6", features = ["compression-full", "cors", "trace", "fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
